--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">棒球資訊平台</a></h1>
+        <h1><a href="index.html">棒球資訊共享平台</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
